--- a/src/test/datascience/widgets/notebooks/k3d_widgets.ipynb
+++ b/src/test/datascience/widgets/notebooks/k3d_widgets.ipynb
@@ -1,17 +1,17 @@
 {
     "cells": [
         {
+            "cell_type": "markdown",
+            "metadata": {},
             "source": [
                 "# Prerequisites\n",
                 "\n",
                 "### pip install K3D"
-            ],
-            "cell_type": "markdown",
-            "metadata": {},
-            "execution_count": null,
-            "outputs": []
+            ]
         },
         {
+            "cell_type": "markdown",
+            "metadata": {},
             "source": [
                 "This ipynb file used to fail even with ipywidgets enabled.\n",
                 "There was a problem with serialization of the array buffer.\n",
@@ -20,11 +20,7 @@
                 "# Note:\n",
                 "Other K3D notebooks worked, except this, hence this test is mandatory.\n",
                 "Who knows what other widgets (or same widgets under different conditions, like K3d) could fail similarly."
-            ],
-            "cell_type": "markdown",
-            "metadata": {},
-            "execution_count": null,
-            "outputs": []
+            ]
         },
         {
             "cell_type": "markdown",
@@ -38,6 +34,7 @@
             "cell_type": "code",
             "execution_count": 5,
             "metadata": {},
+            "outputs": [],
             "source": [
                 "import k3d\n",
                 "import numpy as np\n",
@@ -70,18 +67,17 @@
             ]
         },
         {
-            "source": [
-                "# Here we expect 2 sliders to get rendered. Moving those will update the 3d image in previous cell."
-            ],
             "cell_type": "markdown",
             "metadata": {},
-            "execution_count": null,
-            "outputs": []
+            "source": [
+                "# Here we expect 2 sliders to get rendered. Moving those will update the 3d image in previous cell."
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 4,
             "metadata": {},
+            "outputs": [],
             "source": [
                 "@interact(x=widgets.FloatSlider(value=0,min=-3,max=4,step=0.01))\n",
                 "def g(x):\n",
@@ -96,6 +92,27 @@
         },
         {
             "cell_type": "code",
+            "execution_count": 2,
+            "metadata": {
+                "vscode": {
+                    "languageId": "markdown"
+                }
+            },
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "1234\n"
+                    ]
+                }
+            ],
+            "source": [
+                "print(1234)"
+            ]
+        },
+        {
+            "cell_type": "code",
             "execution_count": null,
             "metadata": {},
             "outputs": [],
@@ -105,6 +122,11 @@
     "metadata": {
         "celltoolbar": "Attachments",
         "file_extension": ".py",
+        "kernelspec": {
+            "display_name": "Python 3.10.4 ('.venv': venv)",
+            "language": "python",
+            "name": "python3"
+        },
         "language_info": {
             "codemirror_mode": {
                 "name": "ipython",
@@ -115,7 +137,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.7.3-final"
+            "version": "3.10.4"
         },
         "mimetype": "text/x-python",
         "name": "python",
@@ -134,7 +156,12 @@
             "toc_section_display": false,
             "toc_window_display": false
         },
-        "version": 3
+        "version": 3,
+        "vscode": {
+            "interpreter": {
+                "hash": "8afb2c210d5a4acbcc19b13c81ba1ac471f989de1356433558f0a79c1349d186"
+            }
+        }
     },
     "nbformat": 4,
     "nbformat_minor": 2
